better docs, delete extra settings option

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,5 @@
   "deno.codeLens.referencesAllFunctions": true,
   "deno.lint": true,
   "deno.internalDebug": true,
-  "deno.suggest.completeFunctionCalls": true,
-  "cSpell.words": ["Ohlc"]
+  "deno.suggest.completeFunctionCalls": true
 }
